--- a/chats/chatbot.html
+++ b/chats/chatbot.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chatbot con Groq</title>
-    <link rel="stylesheet" href="/static/bot.css">
+    <link rel="stylesheet" href="bot.css">
 </head>
 
 <body>
