--- a/chats/cita_movil.html
+++ b/chats/cita_movil.html
@@ -12,6 +12,10 @@
             background-color: #d9f2f8ff;
             margin: 0;
             color: #333;
+             text-align: center;
+             justify-content: center;
+
+            
         }
 
         h1 {
