--- a/chats/cita_movil.html
+++ b/chats/cita_movil.html
@@ -8,12 +8,12 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            padding: 20px;
             background-color: #d9f2f8ff;
             margin: 0;
+            padding: 0;
             color: #333;
-             text-align: center;
-             justify-content: center;
+            text-align: center;
+            justify-content: center;
 
             
         }
