--- a/chats/cita_movil.html
+++ b/chats/cita_movil.html
@@ -6,15 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mostrar Citas del Usuario</title>
     <style>
+         html {
+            margir:0;
+            padding:0;
+            }
         body {
             font-family: Arial, sans-serif;
+            padding: 20px;
             background-color: #d9f2f8ff;
             margin: 0;
-            padding: 0;
             color: #333;
-            text-align: center;
-            justify-content: center;
-
             
         }
 
@@ -27,6 +28,8 @@
         .container {
             width: 80%; 
             justify-content: center;
+             text-align: center;
+            
         }
 
         .text-box {
