--- a/chats/cita_movil.html
+++ b/chats/cita_movil.html
@@ -54,6 +54,8 @@
             margin: 5px 0;
             font-size: 16px;
             color: #ffffff;
+             justify-content: center;
+             text-align: center;
         }
 
         .text-box img {
