--- a/chats/cita_movil.html
+++ b/chats/cita_movil.html
@@ -48,6 +48,7 @@
             color: #ffffff;
             font-size: 18px;
             text-align: center;
+             justify-content: center;
         }
 
         .text-box p {
