--- a/chats/cita_movil.html
+++ b/chats/cita_movil.html
@@ -55,8 +55,9 @@
             margin: 5px 0;
             font-size: 16px;
             color: #ffffff;
-             justify-content: center;
-             text-align: center;
+            text-align: center;
+            justify-content: center;
+            align-items: center;
         }
 
         .text-box img {
