--- a/chats/cita_movil.html
+++ b/chats/cita_movil.html
@@ -28,7 +28,9 @@
         .container {
             width: 100%; 
             justify-content: center;
-             text-align: center;
+            align-items: center;
+            text-align: center;
+            
             
         }
 
