--- a/chats/cita_movil.html
+++ b/chats/cita_movil.html
@@ -42,15 +42,17 @@
             margin-bottom: 20px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             text-align: center;
+            justify-content: center;
+             align-items: center;
             color: #ffffff;
         }
 
         .text-box h3 {
-            margin: 0;
+              margin: 0;
             color: #ffffff;
             font-size: 18px;
             text-align: center;
-             justify-content: center;
+
         }
 
         .text-box p {
